projects/rights-management/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rights-management
  labels:
    app: rights-management
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: rights-management
